Fix spacing on category page add to outfit mode

--- a/src/components/CategoryPage/CategoryPage.css
+++ b/src/components/CategoryPage/CategoryPage.css
@@ -1,6 +1,7 @@
 .piece-link > img {
   max-width: 100%;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .choose-piece {
@@ -20,5 +21,13 @@
 
 .piece-container {
   overflow: scroll;
-  
+}
+
+.category-page {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
