--- a/src/components/Closet/Closet.css
+++ b/src/components/Closet/Closet.css
@@ -31,7 +31,7 @@
   font-size: x-large;
   color: black;
   border-radius: 25px;
-  width: 25%;
+  /* width: 25%; */
   height: 30%;
   margin: 1%;
   display: flex; 
@@ -53,6 +53,16 @@
   justify-content: flex-end;
   padding-left: 10px;
 }
+
+.closet-page {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 @media screen and (max-width: 880px){
   .closet-link {
