--- a/src/components/FormPiece/FormPiece.css
+++ b/src/components/FormPiece/FormPiece.css
@@ -8,3 +8,18 @@
 .add-cart-btn > img{
   width: 30px;
 }
+
+.form-link {
+  text-align: center;
+  text-decoration: none;
+  font-size: x-large;
+  color: black;
+  border-radius: 25px;
+  /* width: 25%; */
+  height: 30%;
+  margin: 1%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
