--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,6 @@ body {
   border-bottom: 5px double #eccdc1;
 }
 
-.closet-page, .category-page {
-  width: 100%;
-  height: 80vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .category-container{
   width: 100%;
   height: 80%;
@@ -51,6 +42,7 @@ body {
   flex-wrap: wrap;
   align-items: space-evenly;
   justify-content: space-evenly;
+  align-content: flex-start;
   height: 100%;
   width: 100%;
 }
